Code quality improvements, implemented DriverPropertyInfo support, added Maven profile for Maven Central deployment